# millionlive-shadow-bout

./: .gitignore  AGENTS.md  GEMINI.md  app.py  cards.jsonl  main.py  pyproject.toml
.github/workflows/: test.yml
docs/: card-schema.json  dev-scenario.md  game-rules.md
docs/plans/: v0.1-janken-streamlit.md  v0.2-card-effects.md
scripts/: check_unimplemented_effects.py  extract_janken_marks_left_card.py  pdf_to_images.py
shadow_bout/: __init__.py  cards.py  effect_core.py  effect_handlers.py  effect_scoring.py  effect_utils.py  effects.py  engine.py  janken.py  models.py  npc.py  scenario.py
shadow_bout/effect_handlers/: __init__.py  card_control.py  card_draw.py  card_steal_copy.py  cards.py  common.py  interactive.py  point_basic.py  point_conditional.py  points.py  registry.py  resume.py  resume_battle.py  resume_cards.py  resume_choices.py
tests/: test_cards.py  test_effect_utils.py  test_effects.py  test_engine.py  test_init_game_must_in_hand.py  test_scenario.py
tests/effects/: helpers.py  test_card_draw_effects.py  test_card_reveal_control_effects.py  test_card_steal_restart_effects.py  test_interactive_choose.py  test_interactive_misc.py  test_interactive_special.py  test_interactive_swap.py  test_point_buffs.py  test_point_conditionals.py  test_point_debuff_basic.py  test_point_immune.py  test_resolution_steps.py  test_resolution_win_condition.py
