[project]
name = "shadow-bout"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shadow_bout"]

[tool.pytest.ini_options]
pythonpath = ["."]
